🚜 refactor: リファクタ

--- a/lib/core/i18n/strings.i18n.json
+++ b/lib/core/i18n/strings.i18n.json
@@ -1,7 +1,3 @@
 {
-    "hello": "Hello $name",
-    "login": {
-        "success": "Logged in successfully",
-        "fail": "Logged in failed"
-    }
+    "appTitle": "Newly"
 }
