--- a/lib/core/i18n/strings_ja.i18n.json
+++ b/lib/core/i18n/strings_ja.i18n.json
@@ -1,3 +1,12 @@
 {
-    "appTitle": "Newly"
+    "appTitle": "Newly",
+    "drawer": {
+        "theme": "テーマ設定",
+        "contact": "お問い合わせ",
+        "termOfService": "利用規約",
+        "privacyPolicy": "プライバシーポリシー",
+        "feedback": "フィードバック",
+        "logout": "ログアウト",
+        "version": "ver. $version"
+    }
 }
